# lumeri

./: .gitignore  AGENTS.md  ARCHITECTURE_REDESIGN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GEMIA_CHANGELOG.md  GEMIA_PROJECT_RECORD.md  HUMAN_NEEDED.md  ISSUES.md  LICENSE  README.md  SECURITY.md  acpx-codex.sh  agent_log.md  architecture.md  demo_m11_fidelity.py  feasibility_dmg_exe.py  gemia_mvp.py  gemia_server_entry.py  launcher.py  pyproject.toml  run_skill.py  run_vertical_validation.py  runtime_test.py  server.py  setup_gcp.sh  tests_http_harness.py
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  test.yml
artifacts/: time_ops_polish_demo.txt
bench/: last_run.json  profile_primitives.py
config/automation/: five_day_loop_seed.json
desktop/: .gitignore  README.md  RELEASE_NOTES.md  main.js  package-lock.json  package.json  preload.js  stub-server.js
desktop/scripts/: copy-assets.js  smoke-shot.js
directive/: foundation.md
docs/: CHANGES-v3-A.md  LUMERI_STATUS_AND_GOALS_2026-05-02.md  agent-loop-phase1.md  ask-mechanism.md  creator-workflow-regression.md  deck-dogfood-content.md  deck-interactive-video-plan.md  durability-plan.md  email-deliverability.md  identity-architecture-plan.md  lum-project-format.md  lumeri-product-core-boundary.md  lus-skill-format.md  mcp-interface-plan.md  merge-debt-inventory.md  multi-agent-plan.md  outline-editing-plan.md  protocol-parity-plan.md  quanta-dogfood-content.md  quanta-kernel-plan.md  semantic-search-media-plan.md  skill-panel-spec.md  timeline-canonical-plan.md  v3-A-M3-real-task.md  v3-A-M3-sse.json  v3-alive-summary.md  v3-todo.md  vector-motion-plan.md  vector_motion-charter.md  video-deck-synergy.md  video-quanta-synergy.md
docs/automation/: codex_self_loop_prompt_zh.md  five_day_seed_checklist.json  gemini_feature_delegate_prompt.md  lumeri_codex_self_loop.md  lumeri_opencode_base_plan.md  (+1 more)
examples/: time_demo.py
gemia/: __main__.py  accounts.py  agent_links.py  agent_loop.py  agent_loop_v3.py  agent_workflow.py  artifacts.py  asset_identity.py  brain_config.py  budget_guard.py  compat.py  config_defaults.py  creative_sandbox.py  creative_sandbox_permissions.py  creative_sandbox_runner.py  creator_workflow_regression.py  email_delivery.py  engine.py  env_probe.py  errors.py  events.py  expressions.py  file_browse_routes.py  gemini_client.py  hyperframes_adapter.py  identity.py  lus.py  mcp_server.py  media_annotations.py  media_ingest.py  media_library.py  media_search.py  memory.py  model_strength.py  onboarding.py  opencode_compat.py  openxr_spatial_delivery.py  orchestrator.py  permissions.py  plan_contract.py  (+28 more)
lumenframe/: __init__.py  catalog.py  compile.py  model.py  ops.py  preview.py  registry.py  render_range.py  resolve.py  resolve_html.py  seek.py  text_anim.py  timebase.py
lumerai/: __init__.py  _sandbox_child.py  export_support.py  otio_adapter.py  patches.py  runtime.py  sandbox.py
models/: README.md
scripts/: _run_gemia_controller.sh  backup_gemia_version.sh  capture_lumeri_plan_input_once.py  clean_cache.sh  codex_lumeri_self_loop.py  export_contract.py  gemia_heartbeat.sh  gemia_loop.sh  gemia_rollover.sh  gemia_stock_fill.sh  install_gemia_backup_hooks.sh  integration_v3_m1.py  lumerai_runtime_kernel_smoke.py  m3_real_task.py  migrate_skills_to_lus.py  milestone_v3.py  run_creator_workflow_regression.py  smoke_gemini_v3.py  smoke_step_cap_v3.py  smoke_tools_v3.py  start_gemia_five_day_loop.sh  stop_gemia_five_day_loop.sh  sync_creative_runtime_asset.py  v3_live_generate_image_evidence.py  vector_motion_demo.py
skills/: add_subtitle.json  change_speed.json  color_grade.json  merge_clips.json  stylize_preview_v1.json  trim_clip.json
skills_v2/: HDR风格.json  产品白底.json  人像磨皮.json  人声增强.json  人声降噪.json  低频增强.json  复古胶片.json  多段合并.json  快进.json  慢动作.json  暖色调色_视频.json  电影调色.json  舞台暖光调色.json  艺术节_多机位合并.json  艺术节_片尾暗场.json  艺术节_舞台调色_暖光.json  艺术节_舞台调色_聚光灯.json  艺术节_视频锐化.json  裁切加速vintage.json  视频稳定.json  视频锐化.json  视频降噪.json  赛博朋克.json  赛博朋克调色_视频.json  音量均衡.json  黑白.json
static/: index.html  next.html
tasks/: tauri_dmg_task.md
tauri-app/: index.html  package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_accounts.py  test_addressability_roundtrip.py  test_agent_links.py  test_agent_loop_lumenframe_inject.py  test_agent_recency_grounding.py  test_agent_workflow.py  test_ai_cache.py  test_animate_captions.py  test_ask_bridge.py  test_ask_mechanism.py  test_assemble_deck.py  test_assemble_quanta.py  test_assemble_shotlist.py  test_asset_identity.py  test_audio_sync.py  test_automation_loop.py  test_brain_config.py  test_bridge.py  test_budget_guard.py  test_camera_craft.py  test_capture_lumeri_plan_input_once.py  test_charter_integrity.py  test_clarification_policy.py  test_codex_self_loop.py  test_comp_ref_bridge.py  test_compose_craft.py  test_craft_spine.py  test_craft_tools.py  test_creative_sandbox_api.py  test_creative_sandbox_runner.py  test_creator_workflow_prompt.py  test_creator_workflow_regression.py  test_deck_frame_assets.py  test_deck_ir.py  test_deck_layout.py  test_deck_materialize.py  test_deck_pager_static.py  test_deck_raster.py  test_draft_shotlist.py  (+205 more)
(+542 files in other folders)
