[project]
name = "lumeri"
version = "0.1.0"
description = "AI-native video/image/audio workbench"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "Pillow>=11.0",
    "opencv-python>=4.9",
    "scikit-image>=0.22",
    "librosa>=0.10",
    "pydub>=0.25",
    "soundfile>=0.12",
    "scipy>=1.12",
    "certifi",
    "PyYAML>=6",
    "opentimelineio>=0.17",
]

[project.scripts]
lumeri-skill-stats = "gemia.ai.skill_telemetry:main"

[tool.setuptools.packages.find]
include = ["gemia*", "lumerai*"]

[tool.setuptools.package-data]
"gemia.ai" = ["skills/*/SKILL.md", "skills/_combos/*.yaml"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Optional NLE interchange adapters (OTIO spun these out of core). Opt in with
# `pip install lumeri[interop]` to enable EDL / FCP7 XML / FCPX export+import.
# Core install stays light; otio_json/otioz/otiod ship with opentimelineio.
interop = [
    "otio-cmx3600-adapter>=1.0",
    "otio-fcp-adapter>=1.0",
    "otio-fcpx-xml-adapter>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
