[project]
name = "lumeri"
version = "0.2.0"
description = "Lumeri Video — agentic video project workspace"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=11.0",
    "PyYAML>=6",
    "certifi",
    "opentimelineio>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Optional NLE interchange adapters (OTIO spun these out of core). Opt in with
# `pip install lumeri[interop]` to enable EDL / FCP7 XML / FCPX export+import.
interop = [
    "otio-cmx3600-adapter>=1.0",
    "otio-fcp-adapter>=1.0",
    "otio-fcpx-xml-adapter>=1.0",
]

[tool.setuptools.packages.find]
include = ["gemia*", "lumerai*"]

[tool.setuptools.package-data]
"gemia" = ["prompts/*.md"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
