[project]
name = "lumeri"
version = "0.1.0"
description = "AI-native video/image/audio workbench"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "Pillow>=11.0",
    "opencv-python>=4.9",
    "scikit-image>=0.22",
    "onnxruntime>=1.20",
    "moviepy>=1.0",
    "librosa>=0.10",
    "pydub>=0.25",
    "soundfile>=0.12",
    "scipy>=1.12",
    "certifi",
    "PyYAML>=6",
    "opentimelineio>=0.17",
    "regex>=2024.11.6",
]

[project.scripts]
lumeri-skill-stats = "gemia.ai.skill_telemetry:main"

[tool.setuptools.packages.find]
include = ["gemia*", "lumerai*", "lumenframe*"]

[tool.setuptools.package-data]
"gemia.ai" = ["skills/*/SKILL.md", "skills/*/panels/*.json", "skills/*/timeline/*.json", "skills/_combos/*.yaml"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11.0",
]
# Optional NLE interchange adapters (OTIO spun these out of core). Opt in with
# `pip install lumeri[interop]` to enable EDL / FCP7 XML / FCPX export+import.
# Core install stays light; otio_json/otioz/otiod ship with opentimelineio.
interop = [
    "otio-cmx3600-adapter>=1.0",
    "otio-fcp-adapter>=1.0",
    "otio-fcpx-xml-adapter>=1.0",
]
# Lumeri AS an MCP server (docs/mcp-interface-plan.md, Direction A). Opt in with
# `pip install lumeri[mcp]` to run `python -m gemia mcp-serve`. The core install
# stays light; gemia/mcp/server.py imports the SDK lazily inside its serve
# entrypoints, so importing gemia without this extra never fails.
mcp = ["mcp>=1.12,<2"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N806"]  # test function names
"gemia/tools/_schema.py" = ["N816"]  # Gemini api field names

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
