[package]
name = "gemia"
version = "0.1.0"
description = "Gemia AI Creative Workflow Engine"
authors = ["Gemia"]
edition = "2021"

[lib]
name = "gemia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gemia"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
